Fix overlap of moving hero image and waves section

--- a/src/components/content/home/promo/promo.module.css
+++ b/src/components/content/home/promo/promo.module.css
@@ -1,6 +1,7 @@
 .root {
 	background-color: var(--bg-secondary);
 	margin: 4rem 0;
+	z-index: 2;
 }
 
 .list {
